<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/userNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/userNumber"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="#757575"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getFact"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="150dp"
        android:text="@string/buttonGetFact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/getRandomNumberFact"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getRandomNumberFact"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginEnd="50dp"
        android:text="@string/buttonGetRandomFact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/getFact" />

    <TextView
        android:id="@+id/userStore"
        android:layout_width="357dp"
        android:layout_height="149dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="200dp"
        android:text="@string/userStore"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/getFact"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/fact"
        android:layout_width="338dp"
        android:layout_height="90dp"
        android:layout_marginBottom="80dp"
        android:text="@string/facts"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/factButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fact" />



</androidx.constraintlayout.widget.ConstraintLayout>